testsuite/poke.pkl/funcall-vararg-diag-1.pk
/* { dg-do compile } */

defun foo = (args...) int:
  {
   return args[0]; /* { dg-error ".*\n.*" } */
  }
